Adjust text-shadow, update images, fix dropdown visibility

--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -2,7 +2,7 @@
     --text-color-white: #fff;
     --text-color: #333;
     --link-color: #0969DA;
-    --footer-color: #444;
+    --footer-color: #666;
     --color-download: #00924C;
     --color-download-mr: #00AF5C;
     --color-download-cf: #F1693C;
